# bloomberg-macro-connector

./: .gitignore  CHANGES.txt  CMakeLists.txt  CMakeLists.txt.bak  CMakeLists.txt.example  CMakeLists.txt.ttserver  Makefile  README.md  TODO.txt  bloomberg-c-api-install.sh  build.sh  config-example.json  credentials  profiler.txt
data/: README.md
docs/: go-api.txt  tt_installation.md
docs/goprofiling/: goprofiler.sh  output.txt  report.md  reporter.py  timing_summary.csv
examples/: Makefile  cli.cpp  deserialize.cpp  preliminar.cpp  showdata.cpp  simple.cpp
examples/cplusplus/: Makefile  bpipe-connection.cpp  env.sh  eventhandler.cpp  eventhandler.h  utils.cpp  utils.h
examples/cpp2/: main.cpp
examples/cpp3/: main.cpp
examples/cpp4/: Makefile  main.cpp
examples/flatbuffers_example/: sample.fbs  sample_generated.h
examples/flatbuffers_example/BlpConn/: Message.go
examples/python/: .env  example.py  requirements.txt
fb/: Makefile  blpconn_fb.fbs  economic_event.fbs
go/: API.txt  Makefile  blpconn.i  blpconngo.go  build.sh  callback.c  callback.go  callback.h  deserialize.go  eventsubtype_string.go  eventtype_string.go  go.mod  handler.go  install.sh  local.c  local.h  main.go  managed.go  message.go  models.go  moduletype_string.go  prettyprint.go  referencemap.go  releasestatus_string.go  servicestatus_string.go  sessionstatus_string.go  subscriptionstatus_string.go  timeprocs.go
go/BlpConn/FB/: DateTime.go  EventSubType.go  EventType.go  HeadlineCalendarEvent.go  HeadlineEconomicEvent.go  Heartbeat.go  LogMessage.go  MacroCalendarEvent.go  MacroHeadlineEvent.go  MacroReferenceData.go  Main.go  Message.go  ModuleType.go  ReleaseStatus.go  ServiceStatusType.go  SessionStatusType.go  SessionType.go  SubscriptionStatusType.go  Value.go
go/cli/: main.go
go/deserialize/: main.go
go/loadfbbin/: main.go
go/managed/: main.go
go/profiler/: main.go
go/simple/: build.sh  main.go
go/tests/: deserialize_test.go  loadfbbin_test.go  referencemap_test.go
include/: blpapi_subscriptionlist.h  blpapi_versionmacros.h  blpconn.h  blpconn_deserialize.h  blpconn_event.h  blpconn_fb_generated.h  blpconn_logger.h  blpconn_message.h  blpconn_observer.h  blpconn_profiler.h  blpconn_serialize.h  economic_event.h  economic_event_generated.h  minispdlog.h
lib/: README.md
request/: report.md
schemas/: economic-data-schema.xsd  globalecoref-schema.xsd  instruments.xsd  market-data.xsd
src/: Makefile  connection.cpp  deserialize.cpp  eco_streams.cpp  eventhandler.cpp  fbtofile.cpp  logger.cpp  observer.cpp  ostreams.cpp  parser.cpp  profiler.cpp  serialize.cpp  subscription.cpp  timeutils.cpp
swig/: Makefile  blpconngo.i
tests/: CMakeLists.txt  README.md  test_connection.cpp  test_convert_to_datetime.cpp  test_deserialize.cpp  test_fbBufferToFile.cpp  test_macro.cpp  test_serialization.cpp  test_serialize.cpp  test_subscription.cpp  test_toMicrosecondsSinceEpoch.cpp
tests/archive/: test_loadfbbin.cpp
vrs/python/: defs.py  env-sample  example.py  notebook.ipynb  requirements.txt
vrs/python/BlpConn/: DateTime.py  EconomicEvent.py  HeadlineCalendarEvent.py  HeadlineEconomicEvent.py  Value.py
vrs/python/BlpConn/FB/: DateTime.py  EconomicEvent.py  EventSubType.py  EventType.py  HeadlineCalendarEvent.py  HeadlineEconomicEvent.py  Heartbeat.py  LogMessage.py  MacroCalendarEvent.py  MacroHeadlineEvent.py  MacroReferenceData.py  Main.py  Message.py  ModuleType.py  ReleaseStatus.py  ServiceStatusType.py  SessionStatusType.py  SessionType.py  SubscriptionStatusType.py  Value.py
vrs/python/BlpConn/Message/: DateRange.py  DateTime.py  Distribution.py  EconomicEvent.py  EmptyEconomicEvent.py  EventSubType.py  EventType.py  HeadlineCalendarEvent.py  HeadlineEconomicEvent.py  HeartBeat.py  ReleaseStatus.py  ReleaseTime.py  RevisionMetadata.py  Scalar.py  Single.py  Value.py
